Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43902

When dismissing a Javascript dialog via the close button the webpage which showed it is not responsive

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.1
    • 5.4.0
    • WebEngine
    • None
    • Windows 7, Linux
    • f65aea4d98f498a1e97abf84bad24789f2342499

    Description

      When dismissing a Javascript dialog via the close button the webpage which showed it is not responsive. With the quicknanobrowser example go to:

      http://www.javascripter.net/faq/prompt.htm

      and then click on Try It Now. Close the resulting dialog via the X and then try to interact with the web page. It is not possible to interact with, however you can still go to another page via the Back button so the application itself as a whole is responsive.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mibrunin Michael Bruning
              andysh Andy Shaw
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes