Also run the rejected signal handler when closing prompt dialogs.

The prompt dialog inherits ApplicationWindow, which emits the
signal "closing" when the window gets closed by pressing the X
button.

Change-Id: I23e5cf6f8e81251869d765d7fd2864257f3c0b89
Task-number: QTBUG-43902
Reviewed-by: Andras Becsi <andras.becsi@theqtcompany.com>